--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "autotex-rust"
+name = "autotex"
 version = "0.1.1"
 authors = ["Sungbae Jeong <almagest0328@gmail.com>"]
 edition = "2018"
