--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "autotex"
-version = "0.2.4"
+version = "1.0.0"
 authors = ["Sungbae Jeong <almagest0328@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-walkdir = "2.3.1"
-dirs = "3.0.0"
-signal = "0.7.0"
-yaml-rust = "0.4.4"
+walkdir = "2.3"
+dirs = "3.0"
+signal = "0.7"
+yaml-rust = "0.4"
+clap = "2.33"
