--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "autotex"
+description = "Continuously compile TeX and LaTeX "
 version = "1.2.0"
 authors = ["Sungbae Jeong <almagest0328@gmail.com>"]
+license = "MIT"
 edition = "2018"
 
 [dependencies]
 walkdir = "2.3"
-dirs = "4.0"
+dirs = "5.0"
 signal-hook = "0.3"
 yaml-rust = "0.4"
-clap = "3"
-
+clap = "4"
